[src/assets/styles/1-layouts/marketing-layout/_marketing-layout.scss] Fix padding on navbar on small screens ; [README.md] Reflect angular.io history
Triggered by commit: https://github.com/gotchaquestions/www/commit/6ff9020225330a6f2a96f8f132bf67821fab98a8

--- a/assets/styles/1-layouts/marketing-layout/_marketing-layout.scss
+++ b/assets/styles/1-layouts/marketing-layout/_marketing-layout.scss
@@ -350,7 +350,6 @@ div[layout=row]{
   padding: 32px;
 
   @media (max-width: 600px) {
-    margin-top: 56px;
     padding: 18px;
   }
 
